fixed the mobile overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
     padding: 20px 40px;
     display: grid;
     justify-content: center;
-    gap: 12px;
+    gap: 20px;
     align-items: center;
   }
   .App nav .group{
@@ -152,7 +152,7 @@ nav ul li{
 
 .notice{
   position: absolute;
-  bottom: -30px;
+  bottom: 10px;
   left: calc(-2000px + 814px);
   border: 2px solid var(--primary);
   padding: 40px 80px;
@@ -181,6 +181,19 @@ nav ul li{
 }
 .notice-section{
   display: none;
+  padding: 20px;
+  border-bottom: 2px solid var(--primary);
+  border-top: 2px solid var(--primary);
+  border-radius:  40px;
+}
+.notice-section .notice-desc{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.notice-section .notice-desc p{
+  margin: 20px 0;
 }
 @media screen and (max-width: 1100px) {
   .notice{
@@ -484,5 +497,11 @@ nav ul li{
   .rt-wrapper{
     grid-auto-flow: row;
     grid-gap: 20px;
+  }
+  .project-img{
+    width: 300px;
+  }
+  .hero .hero-img{
+    width: 300px;
   }
 }
